tests/baselines/reference/tsxReactComponentWithDefaultTypeParameter2.errors.txt
tests/cases/conformance/jsx/file.tsx(13,9): error TS2322: Type '{}' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<MyComp<Prop>> & Prop & { children?: ReactNode; }'.
  Type '{}' is not assignable to type 'Prop'.
    Property 'a' is missing in type '{}'.
tests/cases/conformance/jsx/file.tsx(14,18): error TS2322: Type '{ a: "hi"; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<MyComp<Prop>> & Prop & { children?: ReactNode; }'.
  Type '{ a: "hi"; }' is not assignable to type 'Prop'.
    Property 'b' is missing in type '{ a: "hi"; }'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react');
    
    interface Prop {
        a: number,
        b: string
    }
    
    declare class MyComp<P = Prop> extends React.Component<P, {}> {
        internalProp: P;
    }
    
    // Error
    let x = <MyComp />
            ~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<MyComp<Prop>> & Prop & { children?: ReactNode; }'.
!!! error TS2322:   Type '{}' is not assignable to type 'Prop'.
!!! error TS2322:     Property 'a' is missing in type '{}'.
    let x1 = <MyComp a="hi"/>
                     ~~~~~~
!!! error TS2322: Type '{ a: "hi"; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<MyComp<Prop>> & Prop & { children?: ReactNode; }'.
!!! error TS2322:   Type '{ a: "hi"; }' is not assignable to type 'Prop'.
!!! error TS2322:     Property 'b' is missing in type '{ a: "hi"; }'.